syntax = "proto3";

package permisson_proto;

option go_package = "github.com/KonstantinGasser/datalab/service.user-permissions/proto";

import "common/common.proto";

service UserPermissions {
    rpc Init(InitRequest) returns (InitResponse) {}
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc AddApp(AddAppRequest) returns (AddAppResponse) {}
    rpc RevokeApp(RevokeAppRequest) returns (RevokeAppResponse) {}

}

message InitRequest {
    string tracing_ID = 1;
    string user_uuid = 2;
    string user_orgn = 3;
}
message InitResponse {
    int32 status_code = 1;
    string msg = 2;
}

message GetRequest {
    string tracing_ID = 1;
    string user_uuid = 2;
}
message GetResponse {
    int32 status_code = 1;
    string msg = 2;
    common.UserPermissions permissions = 3;
}

message AddAppRequest {
    string tracing_ID = 1;
    string user_uuid = 2;
    string app_uuid = 3;
    common.AppRole app_role = 4;
}
message AddAppResponse {
    int32 status_code = 1; 
    string msg = 2;
}


message RevokeAppRequest {
    string tracing_ID = 1;
    string user_uuid = 2;
    string app_uuid = 3;
}
message RevokeAppResponse {
    int32 status_code = 1;
    string msg = 2;
}